src/test/ui/on-unimplemented/multiple-impls-complex-filtering.stderr
error[E0277]: trait message
  --> $DIR/multiple-impls-complex-filtering.rs:49:5
   |
49 |     Index::index(&[] as &[i32], 2usize);
   |     ^^^^^^^^^^^^ trait label if i32
   |
   = help: the trait `Index<usize>` is not implemented for `[i32]`
note: required by `Index::index`
  --> $DIR/multiple-impls-complex-filtering.rs:26:5
   |
26 |     fn index(&self, index: Idx) -> &Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: trait message
  --> $DIR/multiple-impls-complex-filtering.rs:49:5
   |
49 |     Index::index(&[] as &[i32], 2usize);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait label if i32
   |
   = help: the trait `Index<usize>` is not implemented for `[i32]`

error[E0277]: trait message
  --> $DIR/multiple-impls-complex-filtering.rs:50:5
   |
50 |     Index::index(&[] as &[i32], 2u32);
   |     ^^^^^^^^^^^^ trait label if i32
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`
note: required by `Index::index`
  --> $DIR/multiple-impls-complex-filtering.rs:26:5
   |
26 |     fn index(&self, index: Idx) -> &Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: trait message
  --> $DIR/multiple-impls-complex-filtering.rs:50:5
   |
50 |     Index::index(&[] as &[i32], 2u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait label if i32
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`

error[E0277]: trait message
  --> $DIR/multiple-impls-complex-filtering.rs:51:5
   |
51 |     Index::index(&[] as &[u32], 2u32);
   |     ^^^^^^^^^^^^ trait label
   |
   = help: the trait `Index<_>` is not implemented for `[u32]`
note: required by `Index::index`
  --> $DIR/multiple-impls-complex-filtering.rs:26:5
   |
26 |     fn index(&self, index: Idx) -> &Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: trait message
  --> $DIR/multiple-impls-complex-filtering.rs:51:5
   |
51 |     Index::index(&[] as &[u32], 2u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait label
   |
   = help: the trait `Index<_>` is not implemented for `[u32]`

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls-complex-filtering.rs:55:5
   |
55 |     Index::index(&[] as &[i32], Foo(2u32));
   |     ^^^^^^^^^^^^ impl foo [i32] Foo<u32> Index
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`
note: required by `Index::index`
  --> $DIR/multiple-impls-complex-filtering.rs:26:5
   |
26 |     fn index(&self, index: Idx) -> &Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls-complex-filtering.rs:55:5
   |
55 |     Index::index(&[] as &[i32], Foo(2u32));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl foo [i32] Foo<u32> Index
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls-complex-filtering.rs:58:5
   |
58 |     Index::index(&[] as &[i32], Bar(2u32));
   |     ^^^^^^^^^^^^ on impl for Bar
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`
note: required by `Index::index`
  --> $DIR/multiple-impls-complex-filtering.rs:26:5
   |
26 |     fn index(&self, index: Idx) -> &Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls-complex-filtering.rs:58:5
   |
58 |     Index::index(&[] as &[i32], Bar(2u32));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ on impl for Bar
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`

error: aborting due to 10 previous errors

